--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,6 +22,47 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+}
+
 .search {
   display: flex;
+  column-gap: 8px;
+  margin-top: 36px;
+}
+
+.search-input {
+  width: 272px;
+  height: 40px;
+  line-height: 24px;
+  padding-left: 16px;
+  letter-spacing: 0.004px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+
+.search-input:hover,
+.search-input:focus,
+.search-input:active {
+  border: 1px solid #4E75FF;
+}
+
+
+.submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #FFFFFF;
+  background-color: #4E75FF;
+  padding: 8px 16px;
+  border: none;
+}
+
+.submit:hover {
+  background-color: #6C8CFF;
 }
